--- a/alelo/package.json
+++ b/alelo/package.json
@@ -42,6 +42,7 @@
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vee-validate": "^2.1.7",
+    "vue-i18n": "^8.22.2",
     "webpack": "^4.44.0",
     "webpack-merge": "^5.0.9"
   }
