--- a/alelo/package.json
+++ b/alelo/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "axios": "^0.20.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "clean-webpack-plugin": "^3.0.0",
     "moment": "^2.29.0",
+    "terser-webpack-plugin": "^5.0.3",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.4.5",
