--- a/alelo/package.json
+++ b/alelo/package.json
@@ -15,10 +15,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "clean-webpack-plugin": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.2",
     "moment": "^2.29.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "terser-webpack-plugin": "^5.0.3",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
@@ -29,7 +36,6 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -39,7 +45,6 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
     "script-loader": "^0.7.2",
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
