--- a/alelo/package.json
+++ b/alelo/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel clean webpack-dev-server webpack:dev",
+    "start": "npm-run-all --parallel clean webpack:dev",
     "build": "npm-run-all --parallel clean webpack:prod",
     "webpack-dev-server": "webpack-dev-server --env.env=dev",
     "webpack:dev": "webpack --env.env=dev --watch --progress --profile --colors",
@@ -18,8 +18,12 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "mini-css-extract-plugin": "^1.3.2",
     "moment": "^2.29.0",
     "postcss-loader": "^3.0.0",
