--- a/alelo/package.json
+++ b/alelo/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
@@ -47,6 +47,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "caniuse-lite": "^1.0.30001245",
     "css-loader": "^3.6.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "npm-run-all": "^4.1.5",
